# lazac-copy-number

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snakefile
.github/workflows/: build.yml
data/: README.md
data/simulations/: n100_l1000_s0_edgelist.csv  n100_l1000_s2_tree.newick  n100_l1000_s3_edgelist.csv  n100_l2000_s4_edgelist.csv  n100_l2000_s4_tree.newick  n100_l3000_s0_tree.newick  n100_l3000_s1_edgelist.csv  n100_l3000_s5_edgelist.csv  n100_l3000_s5_tree.newick  n100_l4000_s1_tree.newick  n100_l4000_s2_edgelist.csv  n100_l4000_s3_tree.newick  n100_l4000_s6_edgelist.csv  n100_l4000_s6_tree.newick  n150_l1000_s0_tree.newick  n150_l1000_s1_tree.newick  n150_l1000_s3_edgelist.csv  n150_l1000_s5_edgelist.csv  n150_l1000_s6_edgelist.csv  n150_l2000_s0_edgelist.csv  n150_l2000_s2_edgelist.csv  n150_l2000_s2_tree.newick  n150_l2000_s4_edgelist.csv  n150_l2000_s5_tree.newick  n150_l3000_s6_tree.newick  n150_l4000_s1_edgelist.csv  n150_l4000_s3_tree.newick  n150_l4000_s4_tree.newick  n200_l1000_s1_edgelist.csv  n200_l1000_s2_tree.newick  n200_l1000_s5_tree.newick  n200_l1000_s6_tree.newick  n200_l2000_s0_tree.newick  n200_l2000_s1_tree.newick  n200_l2000_s2_edgelist.csv  n200_l2000_s4_edgelist.csv  n200_l2000_s6_edgelist.csv  n200_l3000_s0_edgelist.csv  n200_l3000_s3_edgelist.csv  n200_l3000_s3_tree.newick  (+44 more)
examples/: PTX008_cn_profile.csv
include/: breaked.hpp  breaked.hpp.in  clearcut.h  cmdargs.h  common.h  copy_number.hpp  dayhoff.h  digraph.hpp  dist.h  dmat.h  fasta.h  lazac.hpp  lazac.hpp.in  phylogeny.hpp  prng.h  tree_io.hpp  vec_utilities.hpp
recipe/: meta.yaml
scripts/: WeightedCopyNumberDistanceFunctions.py  breaked.py  breaked_nni.py  breakpoint_distance.py  check_violations.py  cntob.R  copy_number.py  copy_number_events_to_profiles.py  nj.py  performance_eval.py  post_process_simSCS.py  postprocess_medalt.py  postprocess_sitka.py  resolve_polytomies.py  root.py  simulations.py  small_parsimony_lp.py  tree_cmp.py
scripts/plots/: chisel_tree_viz.py  copy_number.py  distance_matrix.py  simulation_cmp.py  tree_viz.py
scripts/sbatch/: run_cluster.sh
src/: CMakeLists.txt  breaked.cxx  clearcut.cxx  cmdargs.cxx  copy_number.cxx  dist.c  dmat.c  fasta.cxx  lazac.cxx  tree_io.cxx
